# implement-custom-form-using-django

./: README.md  docker-compose.yml  env.sample
django/: Dockerfile  README.md  bashrc  pyproject.toml
django/app/book/: admin.py  forms.py  models.py  urls.py  views.py
django/app/book/migrations/: 0001_initial.py
django/app/config/: settings.py  urls.py
django/app/templates/: base.html  form.html  index.html  list.html
django/app/templates/book/: author_form.html  author_list.html  book_form.html  book_list.html
django/app/utils/: forms.py  models.py  widgets.py
django/app/utils/templates/renderer/: utils_datalist_javascript.html  utils_form.html
django/app/utils/templates/widgets/: utils_datalist.html  utils_datalist_option.html
env_files/django/: README.md  env.sample
env_files/postgres/: README.md  env.sample
postgres/: Dockerfile
