[project]
name = "app"
version = "0.0.1"
authors = [{ name="yuruto-free", email="103588113+yuruto-free@users.noreply.github.com" },]
maintainers = [{ name="yuruto-free", email="103588113+yuruto-free@users.noreply.github.com" },]
description = "Backend application using Django"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
psycopg = { version="^3.2.6", extras=["c", "pool"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"